--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,16 +1,22 @@
 ---
-broadcast: [BROADCAST]
-color: 
-bgod: [GOD]
-color:
-bhero: [HEROBRINE]
-color:
-announce: [ANNOUNCE]
-color:
-server: [SERVER]
-color:
-console: [CONSOLE]
-color:
-bcia: [CIA]
-color:
+broadcast-tag: [BROADCAST]
+broadcast-color: 
+
+bgod-tag: [GOD]
+bgod-color:
+
+bhero-tag: [HEROBRINE]
+bhero-color:
+
+announce-tag: [ANNOUNCE]
+announce-color:
+
+server-tag: [SERVER]
+server-color:
+
+console-tag: [CONSOLE]
+console-color:
+
+bcia-tag: [CIA]
+bcia-color:
 ...
