--- a/plugin.yml
+++ b/plugin.yml
@@ -8,18 +8,28 @@ commands:
  broadcast:
   description: Broadcast a msg
   default: op
+  usage: "/broadcast <msg>"
  bgod:
   description: Broadcast msg as God
   default: op
+  usage: "/bgod <msg>"
  bhero:
   description: Broadcast msg as herobrine
   default: op
+  usage: "/bhero <msg>"
  announce:
   description: Broadcast announce msg
   default: op
+  usage: "/announce <msg>"
  server: 
   description: Broadcast msg as server
   default: op
+  usage: "/server <msg>"
  console:
   description: Broadcast msg as console
   default: op
+  usage: "/console <msg>"
+ bcia:
+  description: Broadcast message as CIA
+  default: op
+  usage: "/bcia <msg>"
