--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,30 +1,56 @@
 ---
 broadcast-tag: [BROADCAST]
-broadcast-color: 
+broadcast-color: §l§n§f
 brm-color:
 
 bgod-tag: [GOD]
-bgod-color:
+bgod-color: §l§6
 bgm-color:
 
 
 bhero-tag: [HEROBRINE]
-bhero-color:
+bhero-color:§l§c
 bhm-color:
 
 announce-tag: [ANNOUNCE]
-announce-color:
+announce-color:§l§b
 anm-color:
 
 server-tag: [SERVER]
-server-color:
+server-color:§l§d
 sem-color:
 
 console-tag: [CONSOLE]
-console-color:
+console-color:§l§7
 com-color:
 
 bcia-tag: [CIA]
-bcia-color:
+bcia-color:§l§a
 bcm-color:
+
+#Color Codes
+##Taken from pocketmine\utils\TextFormat;
+
+
+#BLACK = "§0"
+#DARK_BLUE = "§1"
+#DARK_GREEN = "§2"
+#DARK_AQUA = "§3"
+#DARK_RED = "§4"
+#DARK_PURPLE = "§5"
+#GOLD = "§6"
+#GRAY = "§7"
+#DARK_GRAY = "§8"
+#BLUE = "§9"
+#GREEN = "§a"
+#AQUA = "§b" 
+#RED = "§c"
+#LIGHT_PURPLE = "§d"
+#YELLOW = "§e"
+#WHITE = "§f"
+#OBFUSCATED = "§k"
+#BOLD = "§l"
+#STRIKETHROUGH = "§m"
+#UNDERLINE = "§n"
+#ITALIC = "§o"
 ...
